basic express server

--- a/package.json
+++ b/package.json
@@ -4,9 +4,14 @@
   "description": "[E-Commerce API Heroku URL](https://e-commerce-api-10.herokuapp.com/)",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "nodemon app.js"
   },
-  "keywords": [],
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "express": "^4.17.1"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.13"
+  }
 }
