--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "express": "^4.17.1",
     "express-async-errors": "^3.1.1",
     "http-status-codes": "^2.1.4",
-    "mongoose": "^6.0.9"
+    "mongoose": "^6.0.9",
+    "morgan": "^1.10.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.13"
