--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "express-async-errors": "^3.1.1",
     "http-status-codes": "^2.1.4",
     "mongoose": "^6.0.9",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "validator": "^13.6.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.13"
